--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,13 @@ dependencies {
   
   // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core
   compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.8'
-  
+
+// https://mvnrepository.com/artifact/org.slf4j/slf4j-api
+  compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
+
+// https://mvnrepository.com/artifact/org.slf4j/slf4j-log4j12
+  compile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.25'
+
   testCompile group: 'junit', name: 'junit', version: '4.12'
 // https://mvnrepository.com/artifact/org.spockframework/spock-core
   testCompile group: 'org.spockframework', name: 'spock-core', version: '1.1-groovy-2.4'
