--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,9 @@ dependencies {
 // https://mvnrepository.com/artifact/org.slf4j/slf4j-log4j12
   compile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.25'
 
+  // https://mvnrepository.com/artifact/com.google.guava/guava
+  compile group: 'com.google.guava', name: 'guava', version: '20.0'
+
   testCompile group: 'junit', name: 'junit', version: '4.12'
 // https://mvnrepository.com/artifact/org.spockframework/spock-core
   testCompile group: 'org.spockframework', name: 'spock-core', version: '1.1-groovy-2.4'
