--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -3,3 +3,5 @@ log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{HH:mm:ss:SSS} %5p %c{1} - %m%n
 #log4j.appender.stdout.layout.ConversionPattern=%d{yy-MM-dd HH:mm:ss:SSS} %5p %c{1}:%L - %m%n
+
+#log4j.logger.com.taulia.metrics.service.GithubApiClient=debug
