enhanced usability and documentation

--- a/src/main/resources/metrics.properties
+++ b/src/main/resources/metrics.properties
@@ -1,4 +1,8 @@
 credentials=githubusername:githubapikey
 fromDate=2019-09-01
+
+# The end date for metrics
 toDate=2019-09-30
+
+# Chunk size (in days) used to work around [the Github Search API](https://developer.github.com/v3/search/) limitation of 1,000 search results.
 chunkSize=45
