--- a/src/main/resources/metrics.properties
+++ b/src/main/resources/metrics.properties
@@ -1,4 +1,13 @@
-credentials=githubusername:githubapikey
+# Your user name on Github
+github.username=
+
+# A personal access token for your account; must have `repo` scope
+github.access.token=
+
+# The Github organization that owns the repositories you want to query
+github.org=
+
+# The beginning date for metrics
 fromDate=2019-09-01
 
 # The end date for metrics
