--- a/src/main/resources/metrics.properties
+++ b/src/main/resources/metrics.properties
@@ -15,3 +15,9 @@ toDate=2019-09-30
 
 # Chunk size (in days) used to work around [the Github Search API](https://developer.github.com/v3/search/) limitation of 1,000 search results.
 chunkSize=45
+
+# Location to store cached Github API responses. Defaults to `${System.getenv('HOME')}/metrics/cache`
+#cache.directory=/tmp/metrics/cache
+
+# Location to store reports. Defaults to `${System.getenv('HOME')}/metrics/reports`
+#output.directory=/tmp/metrics/output
