Exclude repositories support

--- a/src/main/resources/metrics.properties
+++ b/src/main/resources/metrics.properties
@@ -16,6 +16,9 @@ toDate=2019-09-30
 # Chunk size (in days) used to work around [the Github Search API](https://developer.github.com/v3/search/) limitation of 1,000 search results.
 chunkSize=45
 
+# Optional - exclude repositories from search results
+excludeRepositories=
+
 # Location to store cached Github API responses. Defaults to `${System.getenv('HOME')}/metrics/cache`
 #cache.directory=/tmp/metrics/cache
 
