--- a/src/main/resources/metrics.properties
+++ b/src/main/resources/metrics.properties
@@ -1,17 +1,17 @@
 # Your user name on Github
-github.username=
+github.username=jmin1429
 
 # A personal access token for your account; must have `repo` scope
-github.access.token=
+github.access.token=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
 
 # The Github organization that owns the repositories you want to query
-github.org=
+github.org=SyscoCorporation
 
 # The beginning date for metrics
-fromDate=2019-09-01
+fromDate=2021-07-01
 
 # The end date for metrics
-toDate=2019-09-30
+toDate=2021-07-18
 
 # Chunk size (in days) used to work around [the Github Search API](https://developer.github.com/v3/search/) limitation of 1,000 search results.
 chunkSize=45
