stuff I was working on at LABS

--- a/src/main/resources/metrics.properties
+++ b/src/main/resources/metrics.properties
@@ -2,19 +2,27 @@
 github.username=jmin1429
 
 # A personal access token for your account; must have `repo` scope
-github.access.token=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
+github.access.token=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
 
 # The Github organization that owns the repositories you want to query
 github.org=SyscoCorporation
 
+github.org.refresh=false
+
+github.org.excluded.users=svc-bender-000,sysco-adlm
+github.org.excluded.teams=syscolabs-customer-experience-sysco-shop
+
+# The Github team, used to filter pull requests
+github.team=syscolabs-customer-experience-engineering
+
 # The beginning date for metrics
-fromDate=2021-07-01
+fromDate=2022-03-01
 
 # The end date for metrics
-toDate=2021-07-18
+toDate=2022-03-18
 
 # Chunk size (in days) used to work around [the Github Search API](https://developer.github.com/v3/search/) limitation of 1,000 search results.
-chunkSize=45
+chunkSize=10
 
 # Location to store cached Github API responses. Defaults to `${System.getenv('HOME')}/metrics/cache`
 #cache.directory=/tmp/metrics/cache
